# q-history-mcp-server

./: .gitignore  INSTALL.md  LICENSE  PARSER_FIX.md  README.md  debug_dijkstra_conv.py  greatness  install.sh  pyproject.toml  requirements.txt  test_mac_db.py  test_server.py
.amazonq/cli-todo-lists/: 1757922263960.json
q_history_mcp/: __init__.py  database.py  server_fixed.py  server_nonumpy.py
q_history_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
~/: stack.md
