[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-history-mcp"
version = "1.0.0"
description = "Semantic search and analysis for Amazon Q Developer CLI conversation history"
authors = [{name = "Amazon Q Developer CLI Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.64.0"
]

[project.scripts]
q-history-mcp = "q_history_mcp.server_nonumpy:main"

[project.urls]
Homepage = "https://github.com/mibeco/q-history-mcp-server"
Repository = "https://github.com/mibeco/q-history-mcp-server"

[tool.setuptools]
packages = ["q_history_mcp"]

[tool.setuptools.package-data]
q_history_mcp = ["*.py"]
